[gd_scene load_steps=2 format=3 uid="uid://04lsquuy5767"]

[ext_resource type="Script" uid="uid://c57qsry6xgb6c" path="res://addons/quick_actions/quick_actions_panel.gd" id="1_6jd18"]

[node name="QuickActionsPanel" type="PanelContainer"]
custom_minimum_size = Vector2(200, 300)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -952.0
offset_bottom = -348.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6jd18")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "âš¡ Quick Actions"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScreenshotButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "ðŸ“¸ Screenshot"

[node name="ReloadButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "ðŸ”„ Reload Scene"

[node name="FPSButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Show FPS"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TimescaleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Speed: 1.00x"

[node name="TimescaleSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 3.0
step = 0.1
value = 1.0
